--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -11,3 +11,6 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/Unreal_WeekDay")
 +ActiveClassRedirects=(OldClassName="TP_BlankGameModeBase",NewClassName="Unreal_WeekDayGameModeBase")
 
+[/Script/EngineSettings.GameMapsSettings]
+GlobalDefaultGameMode=/Script/Unreal_WeekDay.Unreal_WeekDayGameModeBase
+
