총알 데칼 구현

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -13,4 +13,6 @@ AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/EngineSettings.GameMapsSettings]
 GlobalDefaultGameMode=/Script/Unreal_WeekDay.Unreal_WeekDayGameModeBase
+EditorStartupMap=/Game/Levels/01_Actor.01_Actor
+GameDefaultMap=/Game/Levels/01_Actor.01_Actor
 
